src/MiniJavaParser.py
# Generated from .\MiniJava.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class MiniJavaParser ( Parser ):

    grammarFileName = "MiniJava.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'class'", "'{'", "'}'", "'public'", "'static'", 
                     "'void'", "'main'", "'('", "'String'", "'['", "']'", 
                     "')'", "'extands'", "';'", "'return'", "','", "'if'", 
                     "'else'", "'while'", "'System.out.println'", "'='", 
                     "'&&'", "'<'", "'+'", "'-'", "'*'", "'.'", "'length'", 
                     "'true'", "'false'", "'this'", "'new'", "'int'", "'!'", 
                     "'boolean'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "INT", "Identifier", "WS", "COMMENT", "LINE_COMMENT" ]

    RULE_goal = 0
    RULE_mainClassDeclaration = 1
    RULE_mainClassBody = 2
    RULE_mainMethod = 3
    RULE_mainMethodDeclaration = 4
    RULE_classDeclaration = 5
    RULE_classBody = 6
    RULE_varDeclaration = 7
    RULE_methodDeclaration = 8
    RULE_methodBody = 9
    RULE_parameters = 10
    RULE_parameterList = 11
    RULE_parameter = 12
    RULE_valueType = 13
    RULE_statement = 14
    RULE_expression = 15
    RULE_intArrayType = 16
    RULE_boolType = 17
    RULE_intType = 18

    ruleNames =  [ "goal", "mainClassDeclaration", "mainClassBody", "mainMethod", 
                   "mainMethodDeclaration", "classDeclaration", "classBody", 
                   "varDeclaration", "methodDeclaration", "methodBody", 
                   "parameters", "parameterList", "parameter", "valueType", 
                   "statement", "expression", "intArrayType", "boolType", 
                   "intType" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    INT=36
    Identifier=37
    WS=38
    COMMENT=39
    LINE_COMMENT=40

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class GoalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mainClassDeclaration(self):
            return self.getTypedRuleContext(MiniJavaParser.MainClassDeclarationContext,0)


        def EOF(self):
            return self.getToken(MiniJavaParser.EOF, 0)

        def classDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaParser.ClassDeclarationContext)
            else:
                return self.getTypedRuleContext(MiniJavaParser.ClassDeclarationContext,i)


        def getRuleIndex(self):
            return MiniJavaParser.RULE_goal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGoal" ):
                listener.enterGoal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGoal" ):
                listener.exitGoal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGoal" ):
                return visitor.visitGoal(self)
            else:
                return visitor.visitChildren(self)




    def goal(self):

        localctx = MiniJavaParser.GoalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_goal)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38
            self.mainClassDeclaration()
            self.state = 42
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MiniJavaParser.T__0:
                self.state = 39
                self.classDeclaration()
                self.state = 44
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 45
            self.match(MiniJavaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MainClassDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(MiniJavaParser.Identifier, 0)

        def mainClassBody(self):
            return self.getTypedRuleContext(MiniJavaParser.MainClassBodyContext,0)


        def getRuleIndex(self):
            return MiniJavaParser.RULE_mainClassDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMainClassDeclaration" ):
                listener.enterMainClassDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMainClassDeclaration" ):
                listener.exitMainClassDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMainClassDeclaration" ):
                return visitor.visitMainClassDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def mainClassDeclaration(self):

        localctx = MiniJavaParser.MainClassDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_mainClassDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self.match(MiniJavaParser.T__0)
            self.state = 48
            self.match(MiniJavaParser.Identifier)
            self.state = 49
            self.mainClassBody()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MainClassBodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mainMethod(self):
            return self.getTypedRuleContext(MiniJavaParser.MainMethodContext,0)


        def getRuleIndex(self):
            return MiniJavaParser.RULE_mainClassBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMainClassBody" ):
                listener.enterMainClassBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMainClassBody" ):
                listener.exitMainClassBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMainClassBody" ):
                return visitor.visitMainClassBody(self)
            else:
                return visitor.visitChildren(self)




    def mainClassBody(self):

        localctx = MiniJavaParser.MainClassBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_mainClassBody)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self.match(MiniJavaParser.T__1)
            self.state = 52
            self.mainMethod()
            self.state = 53
            self.match(MiniJavaParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MainMethodContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mainMethodDeclaration(self):
            return self.getTypedRuleContext(MiniJavaParser.MainMethodDeclarationContext,0)


        def statement(self):
            return self.getTypedRuleContext(MiniJavaParser.StatementContext,0)


        def getRuleIndex(self):
            return MiniJavaParser.RULE_mainMethod

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMainMethod" ):
                listener.enterMainMethod(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMainMethod" ):
                listener.exitMainMethod(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMainMethod" ):
                return visitor.visitMainMethod(self)
            else:
                return visitor.visitChildren(self)




    def mainMethod(self):

        localctx = MiniJavaParser.MainMethodContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_mainMethod)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.mainMethodDeclaration()
            self.state = 56
            self.match(MiniJavaParser.T__1)
            self.state = 57
            self.statement()
            self.state = 58
            self.match(MiniJavaParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MainMethodDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(MiniJavaParser.Identifier, 0)

        def getRuleIndex(self):
            return MiniJavaParser.RULE_mainMethodDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMainMethodDeclaration" ):
                listener.enterMainMethodDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMainMethodDeclaration" ):
                listener.exitMainMethodDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMainMethodDeclaration" ):
                return visitor.visitMainMethodDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def mainMethodDeclaration(self):

        localctx = MiniJavaParser.MainMethodDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_mainMethodDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.match(MiniJavaParser.T__3)
            self.state = 61
            self.match(MiniJavaParser.T__4)
            self.state = 62
            self.match(MiniJavaParser.T__5)
            self.state = 63
            self.match(MiniJavaParser.T__6)
            self.state = 64
            self.match(MiniJavaParser.T__7)
            self.state = 65
            self.match(MiniJavaParser.T__8)
            self.state = 66
            self.match(MiniJavaParser.T__9)
            self.state = 67
            self.match(MiniJavaParser.T__10)
            self.state = 68
            self.match(MiniJavaParser.Identifier)
            self.state = 69
            self.match(MiniJavaParser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(MiniJavaParser.Identifier, 0)

        def classBody(self):
            return self.getTypedRuleContext(MiniJavaParser.ClassBodyContext,0)


        def valueType(self):
            return self.getTypedRuleContext(MiniJavaParser.ValueTypeContext,0)


        def getRuleIndex(self):
            return MiniJavaParser.RULE_classDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDeclaration" ):
                listener.enterClassDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDeclaration" ):
                listener.exitClassDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassDeclaration" ):
                return visitor.visitClassDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def classDeclaration(self):

        localctx = MiniJavaParser.ClassDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_classDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(MiniJavaParser.T__0)
            self.state = 72
            self.match(MiniJavaParser.Identifier)
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MiniJavaParser.T__12:
                self.state = 73
                self.match(MiniJavaParser.T__12)
                self.state = 74
                self.valueType()


            self.state = 77
            self.classBody()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassBodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaParser.VarDeclarationContext)
            else:
                return self.getTypedRuleContext(MiniJavaParser.VarDeclarationContext,i)


        def methodDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaParser.MethodDeclarationContext)
            else:
                return self.getTypedRuleContext(MiniJavaParser.MethodDeclarationContext,i)


        def getRuleIndex(self):
            return MiniJavaParser.RULE_classBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassBody" ):
                listener.enterClassBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassBody" ):
                listener.exitClassBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassBody" ):
                return visitor.visitClassBody(self)
            else:
                return visitor.visitChildren(self)




    def classBody(self):

        localctx = MiniJavaParser.ClassBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_classBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(MiniJavaParser.T__1)
            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MiniJavaParser.T__32) | (1 << MiniJavaParser.T__34) | (1 << MiniJavaParser.Identifier))) != 0):
                self.state = 80
                self.varDeclaration()
                self.state = 85
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MiniJavaParser.T__3:
                self.state = 86
                self.methodDeclaration()
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 92
            self.match(MiniJavaParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def valueType(self):
            return self.getTypedRuleContext(MiniJavaParser.ValueTypeContext,0)


        def Identifier(self):
            return self.getToken(MiniJavaParser.Identifier, 0)

        def getRuleIndex(self):
            return MiniJavaParser.RULE_varDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDeclaration" ):
                listener.enterVarDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDeclaration" ):
                listener.exitVarDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDeclaration" ):
                return visitor.visitVarDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def varDeclaration(self):

        localctx = MiniJavaParser.VarDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_varDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.valueType()
            self.state = 95
            self.match(MiniJavaParser.Identifier)
            self.state = 96
            self.match(MiniJavaParser.T__13)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def valueType(self):
            return self.getTypedRuleContext(MiniJavaParser.ValueTypeContext,0)


        def Identifier(self):
            return self.getToken(MiniJavaParser.Identifier, 0)

        def parameters(self):
            return self.getTypedRuleContext(MiniJavaParser.ParametersContext,0)


        def methodBody(self):
            return self.getTypedRuleContext(MiniJavaParser.MethodBodyContext,0)


        def getRuleIndex(self):
            return MiniJavaParser.RULE_methodDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodDeclaration" ):
                listener.enterMethodDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodDeclaration" ):
                listener.exitMethodDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethodDeclaration" ):
                return visitor.visitMethodDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def methodDeclaration(self):

        localctx = MiniJavaParser.MethodDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_methodDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(MiniJavaParser.T__3)
            self.state = 99
            self.valueType()
            self.state = 100
            self.match(MiniJavaParser.Identifier)
            self.state = 101
            self.parameters()
            self.state = 102
            self.methodBody()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodBodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(MiniJavaParser.ExpressionContext,0)


        def varDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaParser.VarDeclarationContext)
            else:
                return self.getTypedRuleContext(MiniJavaParser.VarDeclarationContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaParser.StatementContext)
            else:
                return self.getTypedRuleContext(MiniJavaParser.StatementContext,i)


        def getRuleIndex(self):
            return MiniJavaParser.RULE_methodBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodBody" ):
                listener.enterMethodBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodBody" ):
                listener.exitMethodBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethodBody" ):
                return visitor.visitMethodBody(self)
            else:
                return visitor.visitChildren(self)




    def methodBody(self):

        localctx = MiniJavaParser.MethodBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_methodBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(MiniJavaParser.T__1)
            self.state = 108
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 105
                    self.varDeclaration() 
                self.state = 110
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MiniJavaParser.T__1) | (1 << MiniJavaParser.T__16) | (1 << MiniJavaParser.T__18) | (1 << MiniJavaParser.T__19) | (1 << MiniJavaParser.Identifier))) != 0):
                self.state = 111
                self.statement()
                self.state = 116
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 117
            self.match(MiniJavaParser.T__14)
            self.state = 118
            self.expression(0)
            self.state = 119
            self.match(MiniJavaParser.T__13)
            self.state = 120
            self.match(MiniJavaParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametersContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameterList(self):
            return self.getTypedRuleContext(MiniJavaParser.ParameterListContext,0)


        def getRuleIndex(self):
            return MiniJavaParser.RULE_parameters

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameters" ):
                listener.enterParameters(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameters" ):
                listener.exitParameters(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameters" ):
                return visitor.visitParameters(self)
            else:
                return visitor.visitChildren(self)




    def parameters(self):

        localctx = MiniJavaParser.ParametersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_parameters)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(MiniJavaParser.T__7)
            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MiniJavaParser.T__32) | (1 << MiniJavaParser.T__34) | (1 << MiniJavaParser.Identifier))) != 0):
                self.state = 123
                self.parameterList()


            self.state = 126
            self.match(MiniJavaParser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaParser.ParameterContext)
            else:
                return self.getTypedRuleContext(MiniJavaParser.ParameterContext,i)


        def getRuleIndex(self):
            return MiniJavaParser.RULE_parameterList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameterList" ):
                listener.enterParameterList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameterList" ):
                listener.exitParameterList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameterList" ):
                return visitor.visitParameterList(self)
            else:
                return visitor.visitChildren(self)




    def parameterList(self):

        localctx = MiniJavaParser.ParameterListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_parameterList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.parameter()
            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MiniJavaParser.T__15:
                self.state = 129
                self.match(MiniJavaParser.T__15)
                self.state = 130
                self.parameter()
                self.state = 135
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def valueType(self):
            return self.getTypedRuleContext(MiniJavaParser.ValueTypeContext,0)


        def Identifier(self):
            return self.getToken(MiniJavaParser.Identifier, 0)

        def getRuleIndex(self):
            return MiniJavaParser.RULE_parameter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameter" ):
                listener.enterParameter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameter" ):
                listener.exitParameter(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter" ):
                return visitor.visitParameter(self)
            else:
                return visitor.visitChildren(self)




    def parameter(self):

        localctx = MiniJavaParser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_parameter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.valueType()
            self.state = 137
            self.match(MiniJavaParser.Identifier)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueTypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def intArrayType(self):
            return self.getTypedRuleContext(MiniJavaParser.IntArrayTypeContext,0)


        def boolType(self):
            return self.getTypedRuleContext(MiniJavaParser.BoolTypeContext,0)


        def intType(self):
            return self.getTypedRuleContext(MiniJavaParser.IntTypeContext,0)


        def Identifier(self):
            return self.getToken(MiniJavaParser.Identifier, 0)

        def getRuleIndex(self):
            return MiniJavaParser.RULE_valueType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValueType" ):
                listener.enterValueType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValueType" ):
                listener.exitValueType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValueType" ):
                return visitor.visitValueType(self)
            else:
                return visitor.visitChildren(self)




    def valueType(self):

        localctx = MiniJavaParser.ValueTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_valueType)
        try:
            self.state = 143
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 139
                self.intArrayType()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 140
                self.boolType()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 141
                self.intType()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 142
                self.match(MiniJavaParser.Identifier)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaParser.StatementContext)
            else:
                return self.getTypedRuleContext(MiniJavaParser.StatementContext,i)


        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(MiniJavaParser.ExpressionContext,i)


        def Identifier(self):
            return self.getToken(MiniJavaParser.Identifier, 0)

        def getRuleIndex(self):
            return MiniJavaParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = MiniJavaParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 186
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 145
                self.match(MiniJavaParser.T__1)
                self.state = 149
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MiniJavaParser.T__1) | (1 << MiniJavaParser.T__16) | (1 << MiniJavaParser.T__18) | (1 << MiniJavaParser.T__19) | (1 << MiniJavaParser.Identifier))) != 0):
                    self.state = 146
                    self.statement()
                    self.state = 151
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 152
                self.match(MiniJavaParser.T__2)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 153
                self.match(MiniJavaParser.T__16)
                self.state = 154
                self.match(MiniJavaParser.T__7)
                self.state = 155
                self.expression(0)
                self.state = 156
                self.match(MiniJavaParser.T__11)
                self.state = 157
                self.statement()
                self.state = 158
                self.match(MiniJavaParser.T__17)
                self.state = 159
                self.statement()
                pass

            elif la_ == 3:
